Optimize read count: Fetch questions at TitlePage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>otoate</title>
+    <meta name="keywords" content="エタリタ,エターナルリターン,スキル音,当て,スキル音当てゲーム,ゲーム,이터널리턴,이리" />
+    <title>Eternal Return Skill Sound Quiz / 이터널 리턴 스킬 음대 게임</title>
   </head>
   <body>
     <div id="root"></div>
